syntax = "proto3";

package identity.v1;

option go_package = "github.com/beegy-labs/my-girok/gen/identity/v1";

import "google/protobuf/timestamp.proto";

// IdentityService provides account, session, and device management operations
service IdentityService {
  // Account operations - Read
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
  rpc ValidateAccount(ValidateAccountRequest) returns (ValidateAccountResponse);
  rpc GetAccountByEmail(GetAccountByEmailRequest) returns (GetAccountByEmailResponse);
  rpc GetAccountByUsername(GetAccountByUsernameRequest) returns (GetAccountByUsernameResponse);

  // Account operations - Write
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc UpdateAccount(UpdateAccountRequest) returns (UpdateAccountResponse);
  rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse);

  // Authentication
  rpc ValidatePassword(ValidatePasswordRequest) returns (ValidatePasswordResponse);

  // Password Management
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc CheckPasswordHistory(CheckPasswordHistoryRequest) returns (CheckPasswordHistoryResponse);
  rpc RecordLoginAttempt(RecordLoginAttemptRequest) returns (RecordLoginAttemptResponse);
  rpc LockAccount(LockAccountRequest) returns (LockAccountResponse);
  rpc UnlockAccount(UnlockAccountRequest) returns (UnlockAccountResponse);

  // MFA Management (User)
  rpc SetupMfa(SetupMfaRequest) returns (SetupMfaResponse);
  rpc VerifyMfaSetup(VerifyMfaSetupRequest) returns (VerifyMfaSetupResponse);
  rpc VerifyMfaCode(VerifyMfaCodeRequest) returns (VerifyMfaCodeResponse);
  rpc DisableMfa(DisableMfaRequest) returns (DisableMfaResponse);
  rpc GetBackupCodes(GetBackupCodesRequest) returns (GetBackupCodesResponse);
  rpc RegenerateBackupCodes(RegenerateBackupCodesRequest) returns (RegenerateBackupCodesResponse);
  rpc UseBackupCode(UseBackupCodeRequest) returns (UseBackupCodeResponse);

  // Session operations
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
  rpc ValidateSession(ValidateSessionRequest) returns (ValidateSessionResponse);
  rpc RevokeSession(RevokeSessionRequest) returns (RevokeSessionResponse);
  rpc RevokeAllSessions(RevokeAllSessionsRequest) returns (RevokeAllSessionsResponse);

  // Device operations
  rpc GetAccountDevices(GetAccountDevicesRequest) returns (GetAccountDevicesResponse);
  rpc TrustDevice(TrustDeviceRequest) returns (TrustDeviceResponse);
  rpc RevokeDevice(RevokeDeviceRequest) returns (RevokeDeviceResponse);

  // Profile operations
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
}

// Account represents a user account in the system
message Account {
  string id = 1;
  string email = 2;
  string username = 3;
  AccountStatus status = 4;
  AccountMode mode = 5;
  bool mfa_enabled = 6;
  bool email_verified = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

// Profile represents user profile information
message Profile {
  string id = 1;
  string account_id = 2;
  string display_name = 3;
  optional string avatar_url = 4;
  optional string bio = 5;
  optional string birth_date = 6;
  optional string phone_number = 7;
  string country_code = 8;
  string language_code = 9;
  string timezone = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

// AccountStatus represents the current state of an account
enum AccountStatus {
  ACCOUNT_STATUS_UNSPECIFIED = 0;
  ACCOUNT_STATUS_PENDING = 1;
  ACCOUNT_STATUS_ACTIVE = 2;
  ACCOUNT_STATUS_SUSPENDED = 3;
  ACCOUNT_STATUS_DELETED = 4;
  ACCOUNT_STATUS_LOCKED = 5;
}

// AccountMode represents the type of account
enum AccountMode {
  ACCOUNT_MODE_UNSPECIFIED = 0;
  ACCOUNT_MODE_USER = 1;
  ACCOUNT_MODE_ADMIN = 2;
  ACCOUNT_MODE_OPERATOR = 3;
  ACCOUNT_MODE_SERVICE = 4;
}

// Device represents a registered device
message Device {
  string id = 1;
  string account_id = 2;
  string fingerprint = 3;
  string device_type = 4;
  string device_name = 5;
  string os_name = 6;
  string os_version = 7;
  string browser_name = 8;
  string browser_version = 9;
  bool is_trusted = 10;
  google.protobuf.Timestamp last_seen_at = 11;
  google.protobuf.Timestamp created_at = 12;
}

// Session represents an active user session
message Session {
  string id = 1;
  string account_id = 2;
  string device_id = 3;
  string ip_address = 4;
  string user_agent = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp expires_at = 7;
  google.protobuf.Timestamp last_activity_at = 8;
  SessionContext session_context = 9;
  optional string service_id = 10;  // For OPERATOR context
  optional string operator_assignment_id = 11;  // For OPERATOR context
}

// SessionContext differentiates user vs operator sessions
enum SessionContext {
  SESSION_CONTEXT_UNSPECIFIED = 0;
  SESSION_CONTEXT_USER = 1;
  SESSION_CONTEXT_OPERATOR = 2;
}

// === Request/Response Messages ===

// GetAccount
message GetAccountRequest {
  string id = 1;
}

message GetAccountResponse {
  Account account = 1;
}

// GetAccountByEmail Response
message GetAccountByEmailResponse {
  Account account = 1;
}

// GetAccountByUsername Response
message GetAccountByUsernameResponse {
  Account account = 1;
}

// ValidateAccount
message ValidateAccountRequest {
  string id = 1;
}

message ValidateAccountResponse {
  bool valid = 1;
  AccountStatus status = 2;
  string message = 3;
}

// GetAccountByEmail
message GetAccountByEmailRequest {
  string email = 1;
}

// GetAccountByUsername
message GetAccountByUsernameRequest {
  string username = 1;
}

// ValidateSession
message ValidateSessionRequest {
  string token_hash = 1;
}

message ValidateSessionResponse {
  bool valid = 1;
  string account_id = 2;
  string session_id = 3;
  google.protobuf.Timestamp expires_at = 4;
  string message = 5;
}

// RevokeSession
message RevokeSessionRequest {
  string session_id = 1;
  string reason = 2;
}

message RevokeSessionResponse {
  bool success = 1;
  string message = 2;
}

// RevokeAllSessions
message RevokeAllSessionsRequest {
  string account_id = 1;
  optional string exclude_session_id = 2;
  string reason = 3;
}

message RevokeAllSessionsResponse {
  bool success = 1;
  int32 revoked_count = 2;
  string message = 3;
}

// GetAccountDevices
message GetAccountDevicesRequest {
  string account_id = 1;
}

message GetAccountDevicesResponse {
  repeated Device devices = 1;
}

// TrustDevice
message TrustDeviceRequest {
  string device_id = 1;
  string account_id = 2;
}

message TrustDeviceResponse {
  bool success = 1;
  string message = 2;
}

// RevokeDevice
message RevokeDeviceRequest {
  string device_id = 1;
  string account_id = 2;
  string reason = 3;
}

message RevokeDeviceResponse {
  bool success = 1;
  string message = 2;
}

// GetProfile
message GetProfileRequest {
  string account_id = 1;
}

message GetProfileResponse {
  Profile profile = 1;
}

// === Account CRUD Messages ===

// CreateAccount
message CreateAccountRequest {
  string email = 1;
  string username = 2;
  optional string password = 3;
  AuthProvider provider = 4;
  optional string provider_id = 5;
  AccountMode mode = 6;
  optional string region = 7;
  optional string locale = 8;
  optional string timezone = 9;
  optional string country_code = 10;
}

message CreateAccountResponse {
  Account account = 1;
}

// UpdateAccount
message UpdateAccountRequest {
  string id = 1;
  optional string email = 2;
  optional AccountStatus status = 3;
  optional bool mfa_enabled = 4;
  optional string region = 5;
  optional string locale = 6;
  optional string timezone = 7;
  optional string country_code = 8;
}

message UpdateAccountResponse {
  Account account = 1;
}

// DeleteAccount
message DeleteAccountRequest {
  string id = 1;
}

message DeleteAccountResponse {
  bool success = 1;
  string message = 2;
}

// ValidatePassword
message ValidatePasswordRequest {
  string account_id = 1;
  string password = 2;
}

message ValidatePasswordResponse {
  bool valid = 1;
  string message = 2;
}

// CreateSession
message CreateSessionRequest {
  string account_id = 1;
  optional string device_id = 2;
  optional string ip_address = 3;
  optional string user_agent = 4;
  optional int64 expires_in_ms = 5;
  SessionContext session_context = 6;
  optional string service_id = 7;  // Required for OPERATOR context
  optional string operator_assignment_id = 8;  // Required for OPERATOR context
}

message CreateSessionResponse {
  Session session = 1;
  string access_token = 2;
  string refresh_token = 3;
}

// === Enums for Account CRUD ===

// AuthProvider represents authentication method
enum AuthProvider {
  AUTH_PROVIDER_UNSPECIFIED = 0;
  AUTH_PROVIDER_LOCAL = 1;
  AUTH_PROVIDER_GOOGLE = 2;
  AUTH_PROVIDER_APPLE = 3;
  AUTH_PROVIDER_KAKAO = 4;
  AUTH_PROVIDER_NAVER = 5;
}

// ============================================================
// Password Management Messages
// ============================================================

// ChangePassword
message ChangePasswordRequest {
  string account_id = 1;
  string current_password = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  bool success = 1;
  string message = 2;
}

// ResetPassword (via token/email)
message ResetPasswordRequest {
  string account_id = 1;
  string new_password = 2;
  string reset_token = 3;  // Verification token
}

message ResetPasswordResponse {
  bool success = 1;
  string message = 2;
}

// CheckPasswordHistory (OWASP compliance)
message CheckPasswordHistoryRequest {
  string account_id = 1;
  string password_hash = 2;
  int32 history_count = 3;  // How many previous passwords to check (default: 12)
}

message CheckPasswordHistoryResponse {
  bool is_reused = 1;  // true if password was used before
  string message = 2;
}

// RecordLoginAttempt
message RecordLoginAttemptRequest {
  string account_id = 1;
  string email = 2;
  string ip_address = 3;
  string user_agent = 4;
  bool success = 5;
  string failure_reason = 6;
}

message RecordLoginAttemptResponse {
  bool account_locked = 1;
  int32 failed_attempts = 2;
  int32 max_attempts = 3;
  google.protobuf.Timestamp locked_until = 4;
}

// LockAccount
message LockAccountRequest {
  string account_id = 1;
  int32 duration_minutes = 2;
  string reason = 3;
}

message LockAccountResponse {
  bool success = 1;
  google.protobuf.Timestamp locked_until = 2;
  string message = 3;
}

// UnlockAccount
message UnlockAccountRequest {
  string account_id = 1;
  string unlocked_by = 2;  // Admin/system that unlocked
}

message UnlockAccountResponse {
  bool success = 1;
  string message = 2;
}

// ============================================================
// MFA Management Messages (User)
// ============================================================

// MfaMethod for users
enum MfaMethod {
  MFA_METHOD_UNSPECIFIED = 0;
  MFA_METHOD_TOTP = 1;
  MFA_METHOD_BACKUP_CODE = 2;
}

// SetupMfa
message SetupMfaRequest {
  string account_id = 1;
}

message SetupMfaResponse {
  bool success = 1;
  string secret = 2;  // Base32 encoded TOTP secret
  string qr_code_uri = 3;  // otpauth:// URI for QR code
  repeated string backup_codes = 4;  // Plain text backup codes (one-time view)
  string message = 5;
}

// VerifyMfaSetup (initial setup verification)
message VerifyMfaSetupRequest {
  string account_id = 1;
  string code = 2;
}

message VerifyMfaSetupResponse {
  bool success = 1;
  string message = 2;
}

// VerifyMfaCode (during login)
message VerifyMfaCodeRequest {
  string account_id = 1;
  string code = 2;
  MfaMethod method = 3;
}

message VerifyMfaCodeResponse {
  bool success = 1;
  string message = 2;
}

// DisableMfa
message DisableMfaRequest {
  string account_id = 1;
  string password = 2;  // Require password for security
}

message DisableMfaResponse {
  bool success = 1;
  string message = 2;
}

// GetBackupCodes (check remaining count)
message GetBackupCodesRequest {
  string account_id = 1;
}

message GetBackupCodesResponse {
  int32 remaining_count = 1;
  google.protobuf.Timestamp generated_at = 2;
}

// RegenerateBackupCodes
message RegenerateBackupCodesRequest {
  string account_id = 1;
  string password = 2;  // Require password for security
}

message RegenerateBackupCodesResponse {
  bool success = 1;
  repeated string backup_codes = 2;  // New plain text backup codes
  string message = 3;
}

// UseBackupCode
message UseBackupCodeRequest {
  string account_id = 1;
  string code = 2;
}

message UseBackupCodeResponse {
  bool success = 1;
  int32 remaining_count = 2;
  string message = 3;
}
